set up worker threads, and added code that's been commented out for the purpose of speeding up the process later

--- a/ZephyrEngine/ZephyrEngine.vcxproj.filters
+++ b/ZephyrEngine/ZephyrEngine.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ctpl_stl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="System.cpp">
