--- a/ZephyrEngine/ZephyrEngine.vcxproj
+++ b/ZephyrEngine/ZephyrEngine.vcxproj
@@ -111,6 +111,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ctpl_stl.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="MessageBus.h" />
     <ClInclude Include="Msg.h" />
