--- a/ZephyrEngine/ZephyrEngine.vcxproj
+++ b/ZephyrEngine/ZephyrEngine.vcxproj
@@ -111,6 +111,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ConsoleRenderer.h" />
     <ClInclude Include="ctpl_stl.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="MessageBus.h" />
@@ -118,6 +119,7 @@
     <ClInclude Include="System.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ConsoleRenderer.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MessageBus.cpp" />
     <ClCompile Include="Msg.cpp" />
