linked up and separated the console renderer into systems that use the message bus to communicate. However, therea re 2 issues. 1) I coiuldn't figure out how to multi thread it, so it'susing the MBus on a single thread right now. 2) For some reason I can't move the character past 1 to the right, and i can't move it up. But if I set the position directly, it moves to the correct spot.

--- a/ZephyrEngine/ZephyrEngine.vcxproj.filters
+++ b/ZephyrEngine/ZephyrEngine.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="ConsoleRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RenderSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IOSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="System.cpp">
@@ -48,6 +54,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ConsoleRenderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RenderSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IOSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
