--- a/ZephyrEngine/ZephyrEngine.vcxproj
+++ b/ZephyrEngine/ZephyrEngine.vcxproj
@@ -113,16 +113,20 @@
   <ItemGroup>
     <ClInclude Include="ConsoleRenderer.h" />
     <ClInclude Include="ctpl_stl.h" />
+    <ClInclude Include="IOSystem.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="MessageBus.h" />
     <ClInclude Include="Msg.h" />
+    <ClInclude Include="RenderSystem.h" />
     <ClInclude Include="System.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleRenderer.cpp" />
+    <ClCompile Include="IOSystem.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MessageBus.cpp" />
     <ClCompile Include="Msg.cpp" />
+    <ClCompile Include="RenderSystem.cpp" />
     <ClCompile Include="System.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
