--- a/ZephyrEngine/ZephyrEngine.vcxproj
+++ b/ZephyrEngine/ZephyrEngine.vcxproj
@@ -113,6 +113,9 @@
   <ItemGroup>
     <ClInclude Include="ConsoleRenderer.h" />
     <ClInclude Include="ctpl_stl.h" />
+    <ClInclude Include="DummyGameObj.h" />
+    <ClInclude Include="GameObject.h" />
+    <ClInclude Include="GameSystem.h" />
     <ClInclude Include="IOSystem.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="MessageBus.h" />
@@ -124,6 +127,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleRenderer.cpp" />
+    <ClCompile Include="DummyGameObj.cpp" />
+    <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="GameSystem.cpp" />
     <ClCompile Include="IOSystem.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MessageBus.cpp" />
