--- a/ZephyrEngine/ZephyrEngine.vcxproj
+++ b/ZephyrEngine/ZephyrEngine.vcxproj
@@ -165,6 +165,10 @@
     <ClCompile Include="System.cpp" />
     <ClCompile Include="Vector2.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="fragmentShader.txt" />
+    <Text Include="vertexShader.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
