fixed fso missing from sln

--- a/ZephyrEngine/ZephyrEngine.vcxproj
+++ b/ZephyrEngine/ZephyrEngine.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="ConsoleRenderer.h" />
     <ClInclude Include="ctpl_stl.h" />
     <ClInclude Include="DummyGameObj.h" />
+    <ClInclude Include="FullscreenObj.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameSystem.h" />
     <ClInclude Include="IOSystem.h" />
@@ -150,6 +151,7 @@
   <ItemGroup>
     <ClCompile Include="ConsoleRenderer.cpp" />
     <ClCompile Include="DummyGameObj.cpp" />
+    <ClCompile Include="FullscreenObj.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameSystem.cpp" />
     <ClCompile Include="IOSystem.cpp" />
