--- a/ZephyrEngine/ZephyrEngine.vcxproj
+++ b/ZephyrEngine/ZephyrEngine.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="MessageBus.h" />
     <ClInclude Include="Msg.h" />
     <ClInclude Include="ConsoleRenderSystem.h" />
+    <ClInclude Include="ObjectData.h" />
     <ClInclude Include="PhysicsEngine.h" />
     <ClInclude Include="PhysicsHeader.h" />
     <ClInclude Include="PhysicsObject.h" />
@@ -161,6 +162,7 @@
     <ClCompile Include="MessageBus.cpp" />
     <ClCompile Include="Msg.cpp" />
     <ClCompile Include="ConsoleRenderSystem.cpp" />
+    <ClCompile Include="ObjectData.cpp" />
     <ClCompile Include="PhysicsEngine.cpp" />
     <ClCompile Include="PhysicsObject.cpp" />
     <ClCompile Include="PhysicsSystem.cpp" />
