--- a/ZephyrEngine/ZephyrEngine.vcxproj.filters
+++ b/ZephyrEngine/ZephyrEngine.vcxproj.filters
@@ -81,6 +81,15 @@
     <ClInclude Include="WindArrowObj.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AISystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AIObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AIData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="System.cpp">
@@ -147,6 +156,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="WindArrowObj.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AISystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AIObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
