--- a/ZephyrEngine/ZephyrEngine.vcxproj
+++ b/ZephyrEngine/ZephyrEngine.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{80299868-416B-4891-BDDF-E3E9835C1D6B}</ProjectGuid>
     <RootNamespace>ZephyrEngine</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -84,8 +84,9 @@
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>freeglut.lib;glew32.lib;glew32s.lib;SDL2.lib;SDL2_image.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>fmodL_vc.lib;freeglut.lib;glew32.lib;glew32s.lib;SDL2.lib;SDL2_image.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
+      <AdditionalLibraryDirectories>C:\Users\Kevin\Desktop\Btech\Btech3\Zephyr\ZephyrEngine\FMOD;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -111,6 +112,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>fmod_vc.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -130,6 +132,8 @@
     <ClInclude Include="AIData.h" />
     <ClInclude Include="AIObject.h" />
     <ClInclude Include="AISystem.h" />
+    <ClInclude Include="AudioEngine.h" />
+    <ClInclude Include="AudioSystem.h" />
     <ClInclude Include="Axis.h" />
     <ClInclude Include="Cannonball.h" />
     <ClInclude Include="ConsoleRenderer.h" />
@@ -156,6 +160,8 @@
   <ItemGroup>
     <ClCompile Include="AIObject.cpp" />
     <ClCompile Include="AISystem.cpp" />
+    <ClCompile Include="AudioEngine.cpp" />
+    <ClCompile Include="AudioSystem.cpp" />
     <ClCompile Include="Axis.cpp" />
     <ClCompile Include="Cannonball.cpp" />
     <ClCompile Include="ConsoleRenderer.cpp" />
