--- a/ZephyrEngine/ZephyrEngine.vcxproj.filters
+++ b/ZephyrEngine/ZephyrEngine.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="AudioSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AIDNA.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="System.cpp">
@@ -171,6 +174,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AudioSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AIDNA.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
