--- a/ZephyrEngine/ZephyrEngine.vcxproj
+++ b/ZephyrEngine/ZephyrEngine.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="Main.h" />
     <ClInclude Include="MessageBus.h" />
     <ClInclude Include="Msg.h" />
+    <ClInclude Include="NetworkSystem.h" />
     <ClInclude Include="ObjectData.h" />
     <ClInclude Include="RenderSystem.h" />
     <ClInclude Include="ShipObj.h" />
@@ -157,6 +158,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MessageBus.cpp" />
     <ClCompile Include="Msg.cpp" />
+    <ClCompile Include="NetworkSystem.cpp" />
     <ClCompile Include="RenderSystem.cpp" />
     <ClCompile Include="ShipObj.cpp" />
     <ClCompile Include="System.cpp" />
